[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "secure-string-cipher"
version = "1.0.32+lineaje.1"
authors = [
    { name = "TheRedTower", email = "security@avondenecloud.uk" },
]
description = "A secure AES-GCM encryption utility with user-friendly features"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==46.0.3",
    "argon2-cffi==25.1.0",
    "pynacl==1.6.1",
    "pyperclip==1.11.0",
    "wcwidth==0.2.14",
    "urllib3==2.6.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
maintainers = [
    { name = "Lineaje DepFixer", email = "221268890+Lineaje-DepFixer@users.noreply.github.com" },
]

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
    "pytest-mock==3.15.1",
    "hypothesis==6.146.0",
    "mypy==1.18.2",
    "ruff==0.14.3",
    "detect-secrets==1.5.0",
    "pip-audit==2.9.0",
    "pre-commit>=4.5.0",
]
test = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "pytest-xdist==3.8.0",
    "pytest-timeout==2.4.0",
]

[project.urls]
Homepage = "https://github.com/lineaje-labs-gos/TheRedTower-secure-string-cipher"
"Bug Tracker" = "https://github.com/TheRedTower/secure-string-cipher/issues"
Documentation = "https://github.com/TheRedTower/secure-string-cipher/wiki"
Changelog = "https://github.com/TheRedTower/secure-string-cipher/blob/main/CHANGELOG.md"
Repository = "https://github.com/lineaje-labs-gos/TheRedTower-secure-string-cipher"
Tracker = "https://github.com/lineaje-labs-gos/TheRedTower-secure-string-cipher/issues"

[project.scripts]
ssc = "secure_string_cipher.cli_args:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
    "SIM102",
    "SIM105",
    "SIM117",
    "UP017",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
]
python_classes = [
    "Test*",
]
python_functions = [
    "test_*",
]
addopts = [
    "-v",
    "-ra",
    "-n",
    "auto",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--timeout=30",
    "--maxfail=5",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security-focused tests",
    "fuzz: marks tests as fuzz tests using Hypothesis",
    "benchmark: marks tests as performance benchmarks",
    "unit: marks tests as unit tests",
    "smoke: marks tests as smoke tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = [
    "src",
]
branch = true
parallel = true
omit = [
    "tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.json]
output = "coverage.json"
pretty_print = true
